--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<h1>Home</h1>
+<div id="map_canvas" style="width:70%; height:80%"></div>
+
+<footer>
+  <%= javascript_include_tag "create_map" %>
+  <%= @tweets %>
