--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,21 @@
 <div id="map_canvas" style="width:50%; height:70%"></div>
 
 <footer>
+  <%= javascript_tag do %>
+    window.data = <%= raw @tweets.to_json %>
+  <% end %>
   <%= javascript_include_tag "create_map" %>
-  <%= javascript_include_tag "get_tweets" %>
+  <%= javascript_include_tag "set_markers" %>
   <%= @list %> <br>
   <%= @members %> <br>
-  <%= @tweets[0].geo.coordinates %> <br>
+
   <%= @tweets %>
+  <br>
+  JSON: <% @tweets.each do |t| %>
+  <%= t.user.screen_name %>
+  <%= t.geo.coordinates %><br>
+  <% end %><br>
+  <%= javascript_tag do %>
+    window.tweets = <%= raw @tweets.to_json %>
+  <% end %>
 </footer>
