--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
 
 <h1>Home</h1>
+
 <div id="map_canvas" style="width:50%; height:70%"></div>
+<div><a class="twitter-timeline" href="https://twitter.com/Kleugs513/cincy-street-food-vendors" data-widget-id="302794909528752129">Tweets from @Kleugs513/cincy-street-food-vendors</a>
+</div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 <footer>
   <%= javascript_tag do %>
@@ -8,7 +12,6 @@
   <% end %>
   <%= javascript_include_tag "create_map" %>
   <%= @list %> <br>
-  <%= @members %> <br>
 
   <%= @tweets %>
   <br>
@@ -16,5 +19,6 @@
   <%= t.user.screen_name %>
   <%= t.geo.coordinates %><br>
   <% end %><br>
+  
 
 </footer>
