--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,15 @@
 
   <%= csrf_meta_tags %>
 </head>
+
 <body onload="initialize()">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="brand">Cincy Street Food Map</a>
+      </div>
+    </div>
+  </div>
 <%= yield %>
 </body>
 </html>
