--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 
-<h1>Home</h1>
 
-<div id="map_canvas" style="width:50%; height:70%"></div>
+<div id="map_canvas" style="width:50%; height:70%" class="pull-right"></div>
 <div><a class="twitter-timeline" href="https://twitter.com/Kleugs513/cincy-street-food-vendors" data-widget-id="302794909528752129">Tweets from @Kleugs513/cincy-street-food-vendors</a>
 </div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
