fixed map loading inside div for styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,13 @@
  *= require bootstrap_and_overrides
  *= require_tree .
  */
+body {
+  width: 90%;
+}
+
+#main {
+  padding-top:80px;
+}
+.navbar-inner {
+  padding-bottom: 20px;
+}
