--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,12 @@
       body { height: 100%; margin: 0; padding: 0 }
       #map_canvas { height: 100% }
     </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDin_8yEPNrV3c4CQQOBzyW9oZ3GWXr-y4&sensor=true">
-    </script>
+
 
   <%= csrf_meta_tags %>
 </head>
 
-<body onload="initialize()">
+<body>
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
