--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,22 @@
+<div id="main" class="row-fluid">
+<div class="span8" style="height: 800px">
+  <div id="map_canvas" style="width:80%; height:70%"></div>
+  <br>
+</div>
+<div class="span4">
+<a class="twitter-timeline" href="https://twitter.com/Kleugs513/cincy-street-food-vendors" data-widget-id="302794909528752129">Tweets from @Kleugs513/cincy-street-food-vendors</a>
+</div>
 
-
-<div id="map_canvas" style="width:50%; height:70%" class="pull-right"></div>
-<div><a class="twitter-timeline" href="https://twitter.com/Kleugs513/cincy-street-food-vendors" data-widget-id="302794909528752129">Tweets from @Kleugs513/cincy-street-food-vendors</a>
 </div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 <footer>
+
   <%= javascript_tag do %>
     var tweets = <%= raw @tweets.to_json %>;
   <% end %>
-  <%= javascript_include_tag "create_map" %>
   <%= @list %> <br>
+  <%= javascript_include_tag "create_map" %>
 
   <%= @tweets %>
   <br>
@@ -18,6 +24,6 @@
   <%= t.user.screen_name %>
   <%= t.geo.coordinates %><br>
   <% end %><br>
-  
+
 
 </footer>
