--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,7 +1,68 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$logo: #E7E7E7;
+
+body {
+  
+  background: url('mochaGrunge.png') repeat;
+}
+
+#main {
+  padding-top:60px;
+  width: 90%;
+  margin-left: 5%;
+}
+
+#head {
+	height: 60px;
+	width: 100%;
+	border-bottom: 2px solid #fff;
+	box-shadow: 2px 4px 20px #eee;
+	padding-top: 5px;
+}
+
+#logo {
+	color: $logo;
+	margin-left: 32%;
+	font-size: 50px;
+	font-family: 'Chela One', cursive;
+	text-decoration: none;
+}
+
+.span_2_of_3 {
+	height: 550px;
+}
+
+#map_canvas {
+	width: 100%;
+	height: 100%;
+}
 
 
+/*  GRID OF THREE   ============================================================================= */
+
+	
+.span_3_of_3 {
+	width: 100%; 
+}
+
+.span_2_of_3 {
+	width: 66.1%; 
+}
+
+.span_1_of_3 {
+	width: 32.2%; 
+}
 
 
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	.span_3_of_3 {
+		width: 100%; 
+	}
+	.span_2_of_3 {
+		width: 100%; 
+	}
+	.span_1_of_3 {
+		width: 100%;
+	}
+}
