--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -12,57 +12,57 @@ body {
 }
 
 #head {
-	height: 60px;
-	width: 100%;
-	border-bottom: 2px solid #fff;
-	box-shadow: 2px 4px 20px #eee;
-	padding-top: 5px;
+  height: 60px;
+  width: 100%;
+  border-bottom: 2px solid #fff;
+  box-shadow: 2px 4px 20px #eee;
+  padding-top: 5px;
 }
 
 #logo {
-	color: $logo;
-	margin-left: 32%;
-	font-size: 50px;
-	font-family: 'Chela One', cursive;
-	text-decoration: none;
+  color: $logo;
+  margin-left: 32%;
+  font-size: 50px;
+  font-family: 'Chela One';
+  text-decoration: none;
 }
 
 .span_2_of_3 {
-	height: 550px;
+  height: 550px;
 }
 
 #map_canvas {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 
 /*  GRID OF THREE   ============================================================================= */
 
-	
+  
 .span_3_of_3 {
-	width: 100%; 
+  width: 100%; 
 }
 
 .span_2_of_3 {
-	width: 66.1%; 
+  width: 66.1%; 
 }
 
 .span_1_of_3 {
-	width: 32.2%; 
+  width: 32.2%; 
 }
 
 
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
 
 @media only screen and (max-width: 480px) {
-	.span_3_of_3 {
-		width: 100%; 
-	}
-	.span_2_of_3 {
-		width: 100%; 
-	}
-	.span_1_of_3 {
-		width: 100%;
-	}
+  .span_3_of_3 {
+    width: 100%; 
+  }
+  .span_2_of_3 {
+    width: 100%; 
+  }
+  .span_1_of_3 {
+    width: 100%;
+  }
 }
