added dotenv gem to manage secret key

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,7 +1,6 @@
 $logo: #E7E7E7;
 
 body {
-  
   background: url('mochaGrunge.png') repeat;
 }
 
@@ -15,8 +14,8 @@ body {
   height: 60px;
   width: 100%;
   border-bottom: 2px solid #fff;
-  box-shadow: 2px 4px 20px #eee;
   padding-top: 5px;
+  background: #4282D3;
 }
 
 #logo {
